--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-click==6.7
-Flask==0.12.2
-gevent==1.2.2
-greenlet==0.4.12
-gunicorn==19.7.1
-itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
-Werkzeug==0.12.2
+Click==7.0
+Flask==1.0.2
+gevent==1.3.7
+greenlet==0.4.15
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
+Werkzeug==0.14.1
