--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+async-generator==1.10
 Click==7.0
 Flask==1.0.2
 gevent==1.3.7
@@ -6,4 +7,8 @@ gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
+pyaes==1.6.1
+pyasn1==0.4.4
+rsa==4.0
+Telethon==1.4.3
 Werkzeug==0.14.1
